{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "c2d0abe0-2eeb-44d4-9d94-18b205825aaa",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "9cd46550-0c9e-455a-89d0-c4889a125ae3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseLeftClick",
                    "type": "Button",
                    "id": "6c892b57-b49e-46f0-aa52-bf8b9e639a20",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a19d7136-c633-4772-bafa-aff93252b1a8",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "193e228f-52fa-4872-a2b8-5863b2125462",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}